[package]
name = "example-async-graphql-on-k8s"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
axum = { version = "0.6.8" }
async-graphql = { version = "5.0.6", features = ["chrono"] }
async-graphql-axum = { version = "5.0.6" }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
config = { version = "0.13.3", features = ["toml"] }
anyhow = { version = "1.0.69" }
serde = { version = "1.0.156", features = ["derive"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16" }
